--- a/.development.env
+++ b/.development.env
@@ -3,6 +3,6 @@ DB_HOST=db
 DB_PORT=5432
 DB_USERNAME=nlessonsuser
 DB_PASSWORD=12345678
-DB_SYNCHRONIZE=true
+DB_SYNCHRONIZE=false
 DB_LOGGING=true
 DB_AUTOLOADENTITIES=true
